alteração no index img fundo e Css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <img class="Website-background" src="./assets/Fundo.png" alt="img fundo site">
     <img class="logo"  src="./assets/logo-dolar.gif" alt="logo-convert-dolar">
     <main>
         <label>
